--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \include{theory_generative_models}
 \include{theory_diffusion_models}
 \include{theory_fundamental_NN}
+\include{Models}
 
 \include{experiments}
 \include{results}
